--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -5,12 +5,17 @@
     <string name="save_as">Zapisz jako&#8230;</string>
     <string name="file_saved">Plik został zapisany</string>
     <string name="invalid_file_format">Nieprawidłowy format pliku</string>
-    <string name="no_storage_permissions">Aby mieć dostęp do plików, potrzebuję uprawnień</string>
     <string name="out_of_memory_error">Błąd pamięci</string>
     <string name="an_error_occurred">Wystąpił błąd: %s</string>
     <string name="open_with">Otwórz w</string>
     <string name="no_app_found">Nie znaleziono danych aplikacji</string>
     <string name="set_as">Ustaw jako</string>
+
+    <!-- Permissions -->
+    <string name="no_storage_permissions">Storage permission is required</string>
+    <string name="no_contacts_permission">Contacts permission is required</string>
+    <string name="no_camera_permissions">Camera permission is required</string>
+    <string name="no_audio_permissions">Audio permission is required</string>
 
     <!-- Renaming -->
     <string name="rename_file">Zmień nazwę</string>
