--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -5,12 +5,17 @@
     <string name="save_as">保存</string>
     <string name="file_saved">文件保存成功</string>
     <string name="invalid_file_format">无效文件格式</string>
-    <string name="no_storage_permissions">请授予权限以访问您的存储器</string>
     <string name="out_of_memory_error">内存不足</string>
     <string name="an_error_occurred">啊哦，出错啦: %s</string>
     <string name="open_with">打开方式</string>
     <string name="no_app_found">未找到可用应用</string>
     <string name="set_as">设置为</string>
+
+    <!-- Permissions -->
+    <string name="no_storage_permissions">Storage permission is required</string>
+    <string name="no_contacts_permission">Contacts permission is required</string>
+    <string name="no_camera_permissions">Camera permission is required</string>
+    <string name="no_audio_permissions">Audio permission is required</string>
 
     <!-- Renaming -->
     <string name="rename_file">重命名文件</string>
