removing some colons

--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -213,8 +213,8 @@
 
     <!-- About -->
     <string name="about">Over</string>
-    <string name="website_label">Bezoek voor de broncode:</string>
-    <string name="email_label">Stuur reacties of suggesties naar:</string>
+    <string name="website_label">Bezoek voor de broncode</string>
+    <string name="email_label">Stuur reacties of suggesties naar</string>
     <string name="more_apps_underlined"><u>Meer apps</u></string>
     <string name="third_party_licences_underlined"><u>Licenties van derden</u></string>
     <string name="invite_friends_underlined"><u>Vrienden uitnodigen</u></string>
