remove the color after Follow Us string

--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>हमे प्ले स्टोर पर रेट करें</u></string>
     <string name="donate">Donate</string>
     <string name="donate_underlined"><u>Donate</u></string>
-    <string name="follow_us">हमे फॉलो करें:</string>
+    <string name="follow_us">हमे फॉलो करें</string>
     <string name="copyright">सं %1$s\nकॉपीराइट © सिंपल मोबाइल टूल्स %2$d</string>
     <string name="additional_info">Additional info</string>
     <string name="gruveo">Are you looking for a simple and anonymous video calling app? Try out my other project</string>
