--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Dacci un voto sul Play Store</u></string>
     <string name="donate">Dona</string>
     <string name="donate_underlined"><u>Dona</u></string>
-    <string name="follow_us">Seguici:</string>
+    <string name="follow_us">Seguici</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Informazioni aggiuntive</string>
     <string name="gruveo">Stai cercando un\'app semplice e anonima per videochiamate? Prova l\'altro mio progetto</string>
