--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -222,7 +222,7 @@
     <string name="invite_via">Pakviesti per</string>
     <string name="rate_us_underlined"><u>Ávertink mus</u></string>
     <string name="donate_underlined"><u>Paaukoti</u></string>
-    <string name="follow_us">Sekite mus:</string>
+    <string name="follow_us">Sekite mus</string>
     <string name="copyright">v %1$s\nCopyright Â© Simple Mobile Tools %2$d</string>
     <string name="additional_info">Papildoma informacija</string>
     <string name="gruveo">Ar ieðkote paprastos ir anonimiðkos vaizdo skambuèiø programos? Pabandykite kità mano projektà</string>
