--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Beoordeel ons</u></string>
     <string name="donate">Doneren</string>
     <string name="donate_underlined"><u>Doneren</u></string>
-    <string name="follow_us">Volg ons:</string>
+    <string name="follow_us">Volg ons</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Extra informatie</string>
     <string name="gruveo">Zoekt u een eenvoudige app voor anonieme videogesprekken? Neem dan een kijkje bij mijn andere project:</string>
