--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -227,7 +227,7 @@
     <string name="rate_us_underlined"><u>Oceń aplikację</u></string>
     <string name="donate">Przekaż darowiznę</string>
     <string name="donate_underlined"><u>Przekaż darowiznę</u></string>
-    <string name="follow_us">Śledź nas:</string>
+    <string name="follow_us">Śledź nas</string>
     <string name="copyright">Wersja %1$s\n© Simple Mobile Tools %2$d</string>
     <string name="additional_info">Dodatkowe informacje</string>
     <string name="gruveo">Nie szukasz może prostej i anonimowej w swych działaniach aplikacji do wideorozmów? Wypróbuj mój inny projekt:</string>
