--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Bizi değerlendirin</u></string>
     <string name="donate">Bağışta bulun</string>
     <string name="donate_underlined"><u>Bağışta bulun</u></string>
-    <string name="follow_us">Bizi takip et:</string>
+    <string name="follow_us">Bizi takip et</string>
     <string name="copyright">v %1$s\nTelif Hakkı © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Additional info</string>
     <string name="gruveo">Are you looking for a simple and anonymous video calling app? Try out my other project</string>
