--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Bewerte uns im Play Store</u></string>
     <string name="donate">Spenden</string>
     <string name="donate_underlined"><u>Spenden</u></string>
-    <string name="follow_us">Folge uns:</string>
+    <string name="follow_us">Folge uns</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Zusätliche Infos</string>
     <string name="gruveo">Bist du auf der Suche nach einfachen und anonymen Videoanrufen? Probiere meine anderen Apps aus</string>
