--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Nous évaluer</u></string>
     <string name="donate">Donner</string>
     <string name="donate_underlined"><u>Donner</u></string>
-    <string name="follow_us">Suivez nous:</string>
+    <string name="follow_us">Suivez nous</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Info supplémentaire</string>
     <string name="gruveo">Êtes-vous à la recherche d\'une appli d\'appels vidéo simple et anonyme ? Essayez mon autre projet</string>
