--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Értékelés</u></string>
     <string name="donate">Donate</string>
     <string name="donate_underlined"><u>Donate</u></string>
-    <string name="follow_us">Követés:</string>
+    <string name="follow_us">Követés</string>
     <string name="copyright">%1$s verzió\nSzerzői jogok: © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Additional info</string>
     <string name="gruveo">Are you looking for a simple and anonymous video calling app? Try out my other project</string>
