--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Avalie-nos na Play Store</u></string>
     <string name="donate">Doações</string>
     <string name="donate_underlined"><u>Doações</u></string>
-    <string name="follow_us">Siga-nos:</string>
+    <string name="follow_us">Siga-nos</string>
     <string name="copyright">V %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Informações adicionais</string>
     <string name="gruveo">Está a procura de um app simples e anônimo de chamada de vídeo? Experiemnte meus outros projetos</string>
