--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Avalie-nos na Play Store</u></string>
     <string name="donate">Donativos</string>
     <string name="donate_underlined"><u>Donativos</u></string>
-    <string name="follow_us">Siga-nos:</string>
+    <string name="follow_us">Siga-nos</string>
     <string name="copyright">V %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Mais informações</string>
     <string name="gruveo">Necessita de uma aplicação simples e privada para chamadas de vídeos? Teste os meus outros projetos</string>
