--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -227,7 +227,7 @@
     <string name="rate_us_underlined"><u>Ohodnotiť aplikáciu</u></string>
     <string name="donate">Podporiť</string>
     <string name="donate_underlined"><u>Podporiť</u></string>
-    <string name="follow_us">Nasledujte nás:</string>
+    <string name="follow_us">Sledujte nás</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Dodatočné informácie</string>
     <string name="gruveo">Hľadáte aplikáciu na jednoduché a anonymné videohovory? Skúste môj druhý projekt</string>
