--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>Betygsätt oss i Play Butiken</u></string>
     <string name="donate">Donera</string>
     <string name="donate_underlined"><u>Donera</u></string>
-    <string name="follow_us">Följ oss:</string>
+    <string name="follow_us">Följ oss</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Ytterligare info</string>
     <string name="gruveo">Letar du efter en enkel app för anonyma videosamtal? Prova mitt andra projekt</string>
