--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>为我们打分</u></string>
     <string name="donate">捐赠</string>
     <string name="donate_underlined"><u>捐赠</u></string>
-    <string name="follow_us">关注我们：</string>
+    <string name="follow_us">关注我们</string>
     <string name="copyright">v %1$s Copyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">额外信息</string>
     <string name="gruveo">你在寻找一个简单而匿名的视频通话应用吗？请尝试我的另一个项目</string>
