--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -223,7 +223,7 @@
     <string name="rate_us_underlined"><u>評分我們</u></string>
     <string name="donate">捐贈</string>
     <string name="donate_underlined"><u>捐贈</u></string>
-    <string name="follow_us">追蹤我們:</string>
+    <string name="follow_us">追蹤我們</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">進階資訊</string>
     <string name="gruveo">你正在找一個簡單且匿名的視訊電話程式嗎?試試看我別的應用程式吧</string>
