--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -12,10 +12,10 @@
     <string name="set_as">设置为</string>
 
     <!-- Permissions -->
-    <string name="no_storage_permissions">Storage permission is required</string>
-    <string name="no_contacts_permission">Contacts permission is required</string>
-    <string name="no_camera_permissions">Camera permission is required</string>
-    <string name="no_audio_permissions">Audio permission is required</string>
+    <string name="no_storage_permissions">请授予存储权限</string>
+    <string name="no_contacts_permission">请授予通讯录权限</string>
+    <string name="no_camera_permissions">请授予相机权限</string>
+    <string name="no_audio_permissions">请授予音频权限</string>
 
     <!-- Renaming -->
     <string name="rename_file">重命名文件</string>
@@ -229,8 +229,8 @@
     <string name="gruveo">你在寻找一个简单而匿名的视频通话应用吗？请尝试我的另一个项目</string>
     <string name="app_version">应用版本：%1$s</string>
     <string name="device_os">设备系统：%1$s</string>
-    <string name="donate_please">Hello,\n\nhope you are enjoying the app. It contains no ads, so please support its development by purchasing the <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> app, it will also prevent this dialog from showing up again.\n\nYou can find more donating options <a href="http://simplemobiletools.com/donate">here</a>.\n\nThank you!</string>
-    <string name="purchase">Purchase</string>
+    <string name="donate_please">你好，\n\n希望你喜欢这个应用。它不包含广告，所以请购买<a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> 这个应用支持一下，这样此对话框将不再出现。\n\n你可以在<a href="http://simplemobiletools.com/donate">这里</a>找到更多捐赠选项。\n\n非常感谢！</string>
+    <string name="purchase">购买</string>
 
     <!-- License -->
     <string name="notice">此应用使用了以下三方库。谢谢。</string>
