add some things related to forcing english language

--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -202,6 +202,7 @@
     <!-- Settings -->
     <string name="settings">Ajustes</string>
     <string name="customize_colors">Cambiar colores</string>
+    <string name="use_english_language">Use english language</string>
     <string name="show_hidden">Mostrar ficheros y directorios ocultos</string>
     <string name="font_size">Tamaño de fuente</string>
     <string name="small">Pequeña</string>
