--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -202,6 +202,7 @@
     <!-- Settings -->
     <string name="settings">Paramètres</string>
     <string name="customize_colors">Personnaliser les couleurs</string>
+    <string name="use_english_language">Use english language</string>
     <string name="show_hidden">Montrer les fichiers et dossiers cachés</string>
     <string name="font_size">Taille police</string>
     <string name="small">Petite</string>
