--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -206,6 +206,7 @@
     <!-- Settings -->
     <string name="settings">Ustawienia</string>
     <string name="customize_colors">Dostosuj kolory</string>
+    <string name="use_english_language">Use english language</string>
     <string name="show_hidden">Pokazuj ukryte pliki i foldery</string>
     <string name="font_size">Rozmiar czcionki</string>
     <string name="small">Mała</string>
