--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -202,6 +202,7 @@
     <!-- Settings -->
     <string name="settings">设置</string>
     <string name="customize_colors">自定义颜色</string>
+    <string name="use_english_language">Use english language</string>
     <string name="show_hidden">显示隐藏文件和文件夹</string>
     <string name="font_size">字体大小</string>
     <string name="small">小</string>
