--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -202,6 +202,7 @@
     <!-- Settings -->
     <string name="settings">Nustatymai</string>
     <string name="customize_colors">Spalvø redagavimas</string>
+    <string name="use_english_language">Use english language</string>
     <string name="show_hidden">Rodyti paslëptus failus ir aplankus</string>
     <string name="font_size">Teksto dydis</string>
     <string name="small">Smulkus</string>
