--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -202,6 +202,7 @@
     <!-- Settings -->
     <string name="settings">Instellingen</string>
     <string name="customize_colors">Kleuren aanpassen</string>
+    <string name="use_english_language">Use english language</string>
     <string name="show_hidden">Verborgen bestanden en mappen tonen</string>
     <string name="font_size">Lettergrootte</string>
     <string name="small">Klein</string>
