--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -206,6 +206,7 @@
     <!-- Settings -->
     <string name="settings">Nastavenia</string>
     <string name="customize_colors">Upraviť farby</string>
+    <string name="use_english_language">Použiť angličtinu</string>
     <string name="show_hidden">Zobraziť skryté súbory a priečinky</string>
     <string name="font_size">Veľkosť písma</string>
     <string name="small">Malé</string>
