--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -210,6 +210,7 @@
     <string name="large">Groß</string>
     <string name="extra_large">Sehr groß</string>
     <string name="password_protect_hidden_items">Verstecktes mit Muster/PIN schützen</string>
+    <string name="password_protect_whole_app">Password protect the whole application</string>
     <string name="keep_last_modified">Beim Kopieren/Verschieben/Umbenennen die alte Änderungszeit beibehalten</string>
 
     <!-- About -->
