--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -210,6 +210,7 @@
     <string name="large">Grande</string>
     <string name="extra_large">Molto grande</string>
     <string name="password_protect_hidden_items">Proteggi con password gli elementi nascosti</string>
+    <string name="password_protect_whole_app">Password protect the whole application</string>
     <string name="keep_last_modified">Mantieni valore di ultima modifica dopo il copia/sposta/rinomina</string>
 
     <!-- About -->
