--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -214,6 +214,7 @@
     <string name="large">Veľké</string>
     <string name="extra_large">Extra veľké</string>
     <string name="password_protect_hidden_items">Uzamknúť viditeľnosť skrytých položiek heslom</string>
+    <string name="password_protect_whole_app">Uzamknúť heslom celú aplikáciu</string>
     <string name="keep_last_modified">Ponechať starú hodnotu naposledy-upravené pri kopírovaní/presúvaní/premenúvaní súborov</string>
 
     <!-- About -->
