--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -15,7 +15,7 @@
     <string name="no_storage_permissions">Требуется разрешение для доступа к хранилищу</string>
     <string name="no_contacts_permission">Требуется разрешение для доступа к контактам</string>
     <string name="no_camera_permissions">Требуется разрешение для доступа к камере</string>
-    <string name="no_audio_permissions">Требуется разрешение для доступа аудио</string>
+    <string name="no_audio_permissions">Требуется разрешение для доступа аудиосистеме</string>
 
     <!-- Renaming -->
     <string name="rename_file">Изменение имени файла</string>
