capitalize English in Use English

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -202,7 +202,7 @@
     <!-- Settings -->
     <string name="settings">Nastavení</string>
     <string name="customize_colors">Přizpůsobit barvy</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">Zobrazit skryté soubory a složky</string>
     <string name="font_size">Font size</string>
     <string name="small">Small</string>
