--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -202,7 +202,7 @@
     <!-- Settings -->
     <string name="settings">Einstellungen</string>
     <string name="customize_colors">Farben anpassen</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">Versteckte Dateien/Ordner zeigen</string>
     <string name="font_size">Schriftgröße</string>
     <string name="small">Klein</string>
