--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -202,7 +202,7 @@
     <!-- Settings -->
     <string name="settings">設定</string>
     <string name="customize_colors">表示色のカスタマイズ</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">非表示のファイルとディレクトリーを表示する</string>
     <string name="font_size">メモのフォントサイズ</string>
     <string name="small">小</string>
