--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -202,7 +202,7 @@
     <!-- Settings -->
     <string name="settings">설정</string>
     <string name="customize_colors">앱 테마 및 색상 설정</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">숨김파일 및 폴더 보기</string>
     <string name="font_size">폰트 크기</string>
     <string name="small">작게</string>
