--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -202,7 +202,7 @@
     <!-- Settings -->
     <string name="settings">Inställningar</string>
     <string name="customize_colors">Egna färger</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">Visa dolda filer</string>
     <string name="font_size">Teckenstorlek</string>
     <string name="small">Liten</string>
