--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -202,7 +202,7 @@
     <!-- Settings -->
     <string name="settings">Ayarlar</string>
     <string name="customize_colors">Renkleri özelleştirme</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">Gizli dosyaları ve dizinleri göster</string>
     <string name="font_size">Font size</string>
     <string name="small">Small</string>
