--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -202,7 +202,7 @@
     <!-- Settings -->
     <string name="settings">設定</string>
     <string name="customize_colors">自訂顏色</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">顯示隱藏的檔案及資料夾</string>
     <string name="font_size">字體大小</string>
     <string name="small">小</string>
