--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -204,7 +204,7 @@
     <!-- Settings -->
     <string name="settings">Настройки</string>
     <string name="customize_colors">Настроить цвета</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">Показывать скрытые папки</string>
     <string name="font_size">Размер шрифта</string>
     <string name="small">Мелкий</string>
