--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -202,7 +202,7 @@
     <!-- Settings -->
     <string name="settings">Settings</string>
     <string name="customize_colors">Customize colors</string>
-    <string name="use_english_language">Use english language</string>
+    <string name="use_english_language">Use English language</string>
     <string name="show_hidden">Show hidden files and folders</string>
     <string name="font_size">Font size</string>
     <string name="small">Small</string>
